# kEn

./: .clang-format  .clang-tidy  .cmake-format.py  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  dependencies.lua  kEn.sln  premake5.lua
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  imgui.ini  premake5.lua
Sandbox/assets/models/cube/: cube.mtl
Sandbox/assets/shaders/: phong.frag  phong.vert  shadow.vert  test.frag  test.vert
Sandbox/assets/shaders/consts/: const1.glsl  consts.glsl
Sandbox/src/: app.cpp  sandbox.cpp
cmake/dependencies/: CMakeLists.txt
kEn/: CMakeLists.txt  cpp.hint  kEn.vcxproj  kEn.vcxproj.filters  premake5.lua
kEn/assets/shaders/: light.glsl  material.glsl
kEn/src/: kEn.h  kEn.hpp  kenpch.cpp  kenpch.h  kenpch.hpp  tmp.cpp  tmp.h
kEn/src/kEn/: application.cpp  application.h  core.h  entry_point.h  log.cpp  log.h  window.h
kEn/src/kEn/camera/: camera.cpp  camera.h
kEn/src/kEn/collection/: deque_set.hpp
kEn/src/kEn/core/: application.cpp  application.h  application.hpp  assert.h  assert.hpp  core.h  core.hpp  entry_point.h  entry_point.hpp  input.cpp  input.h  input.hpp  key_codes.h  key_codes.hpp  layer.cpp  layer.h  layer.hpp  layer_stack.cpp  layer_stack.h  layer_stack.hpp  lazy_variable.h  log.cpp  log.h  log.hpp  mod_keys.hpp  mouse_codes.h  mouse_codes.hpp  timestep.hpp  transform.cpp  transform.h  transform.hpp  window.cpp  window.h  window.hpp
kEn/src/kEn/core/input/: input.cpp  input.hpp  mod_keys.hpp  mouse_codes.hpp
kEn/src/kEn/event/: application_events.h  application_events.hpp  event.h  event.hpp  key_events.h  key_events.hpp  mouse_events.h  mouse_events.hpp
kEn/src/kEn/imgui/: debug_layer.cpp  debug_layer.hpp  imgui.cpp  imgui_backend.cpp  imgui_backend.hpp  imgui_frame.cpp  imgui_frame.hpp  imgui_layer.cpp  imgui_layer.h  imgui_layer.hpp  light.cpp  material.cpp  material.hpp  model.cpp  model.hpp
kEn/src/kEn/imgui/editors/: light.cpp  light.hpp  model.cpp  model.hpp
kEn/src/kEn/renderer/: attachment_handle.hpp  buffer.cpp  buffer.h  buffer.hpp  command.hpp  device.hpp  framebuffer.cpp  framebuffer.h  framebuffer.hpp  graphics_context.cpp  graphics_context.h  graphics_context.hpp  light.cpp  light.h  material.cpp  material.h  material.hpp  render_command.cpp  render_command.h  render_command.hpp  render_context.hpp  render_state.hpp  renderer.cpp  renderer.h  renderer.hpp  renderer_api.cpp  renderer_api.h  renderer_api.hpp  shader.cpp  shader.h  shader.hpp  shader_data_type.hpp  texture.cpp  texture.h  texture.hpp  texture_format.hpp  vertex_array.cpp  vertex_array.h  vertex_array.hpp  vertex_input.hpp
kEn/src/kEn/renderer/mesh/: mesh.cpp  mesh.h  (+4 more)
kEn/src/kEn/scene/: component.cpp  component.h  component.hpp  core_components.cpp  core_components.h  core_components.hpp  game_object.cpp  game_object.hpp  id_registry.hpp  light.cpp  light.h  light.hpp
kEn/src/kEn/util/: deque_set.hpp  enum_map.hpp  flags.hpp  platform_utils.h  platform_utils.hpp  string_hash.hpp
kEn/src/platform/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_buffer.hpp  opengl_command.cpp  opengl_command.hpp  opengl_context.cpp  opengl_context.h  opengl_context.hpp  opengl_device.cpp  opengl_device.hpp  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_framebuffer.hpp  opengl_imgui_backend.cpp  opengl_imgui_backend.hpp  opengl_render_context.cpp  opengl_render_context.hpp  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_renderer_api.hpp  opengl_shader.cpp  opengl_shader.h  opengl_shader.hpp  opengl_shader_data_type.hpp  opengl_state.hpp  opengl_swap_chain.cpp  opengl_swap_chain.hpp  opengl_texture.cpp  opengl_texture.h  opengl_texture.hpp  opengl_texture_format.hpp  opengl_vertex_array.cpp  opengl_vertex_array.h  opengl_vertex_array.hpp  opengl_vertex_input.cpp  opengl_vertex_input.hpp
kEn/src/platform/win/: win_input.cpp  win_window.cpp  win_window.h  win_window.hpp  windows_platform_utils.cpp
mEn/: CMakeLists.txt
mEn/src/: mEn.hpp
mEn/src/mEn/: common.hpp  config.hpp  constants.hpp  functions.hpp  functions.inl  fwd.hpp  mat3.hpp  mat4.hpp  mat4.inl  matrix.hpp  matrix.inl  quat.hpp  quat.inl  vec2.hpp  vec2.inl  vec3.hpp  vec3.inl  vec4.hpp  vec4.inl
mEn/src/mEn/detail/: mat3.inl  mat4.inl  quat.inl  vec2.inl  vec3.inl  vec4.inl  vectorize.hpp
mEn/src/mEn/features/: format.hpp  format.inl  mat_decompose.hpp  mat_decompose.inl  ostream.hpp  ostream.inl  type_ptr.hpp  type_ptr.inl
mEn/src/mEn/functions/: common.hpp  common.inl  exponential.hpp  exponential.inl  geometric.hpp  geometric.inl  mat_functions.hpp  mat_functions.inl  matrix_common.hpp  matrix_common.inl  matrix_projection.hpp  matrix_projection.inl  matrix_transform.hpp  matrix_transform.inl  quat_functions.hpp  quat_functions.inl  quaternion_common.hpp  quaternion_common.inl  quaternion_exponential.hpp  quaternion_exponential.inl  quaternion_geometric.hpp  quaternion_geometric.inl  quaternion_transform.hpp  quaternion_transform.inl  quaternion_trigonometric.hpp  quaternion_trigonometric.inl  trigonometric.hpp  trigonometric.inl  vec_functions.hpp  vector_relational.hpp  vector_relational.inl
mEn/src/mEn/util/: mat_functions.inl  vec_functions.inl
mEn/tests/: mat3_test.cpp  mat4_test.cpp  mat_conversions_test.cpp  quat_test.cpp  vec2_test.cpp  vec3_test.cpp  vec4_test.cpp  vec_conversions_test.cpp
mEn/tests/assert/: mat3_eq.hpp  mat4_eq.hpp  quat_eq.hpp  scalar_eq.hpp  vec2_eq.hpp  vec3_eq.hpp  vec4_eq.hpp
mEn/tests/detail/: vectorize_test.cpp
mEn/tests/features/: format_test.cpp  mat_decompose_test.cpp  ostream_test.cpp  type_ptr_test.cpp
mEn/tests/functions/: common_test.cpp  exponential_test.cpp  geometric_test.cpp  matrix_common_test.cpp  matrix_projection_test.cpp  matrix_transform_test.cpp  quaternion_common_test.cpp  quaternion_exponential_test.cpp  quaternion_geometric_test.cpp  quaternion_transform_test.cpp  quaternion_trigonometric_test.cpp  trigonometric_test.cpp  vector_relational_test.cpp
mEn/tests/util/: mat_test_utils.hpp  quat_test_utils.hpp  test_utils.hpp  vec_test_utils.hpp
(+50 files in other folders)
